--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,15 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/main.css">
+    <!-- Fonts -->
+    <script src="https://use.typekit.net/vky6cnw.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
   </head>
   <body>
 
+    {% include header.html %}
     {{content}}
-    <h1>yooooo</h1>
 
   </body>
 
