--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@
 
 // 1-base
 @import "1-base/base";
+@import "1-base/sitewide";
 // Base is used for sitewide styles 'li, ul, body, ect..'
 
 // 2-sections
