--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -103,13 +103,13 @@ body
 
 html,
 body
-  min-height: 100vh
+  height: 100%
 
 body
   background: $bg-color
   font-size: 14px
   line-height: 1.6
-  font-family: 'Fira Sans', sans-serif
+  font-family: "brandon-grotesque",sans-serif
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
