--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -451,13 +451,113 @@ body {
 
 html,
 body {
-  min-height: 100vh; }
+  height: 100%; }
 
 body {
   background: lightblue;
   font-size: 14px;
   line-height: 1.6;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "brandon-grotesque",sans-serif;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
+
+.bar {
+  height: 72px;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-bottom: 5px solid red; }
+
+.gigantic, .hero {
+  height: 100%;
+  width: 100%;
+  position: relative; }
+
+#homepage-big {
+  background: url("/assets/img/hero.jpg") no-repeat center center;
+  background-size: cover; }
+
+.gigantic--overlay {
+  background-color: #28223B;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.7; }
+
+.container-flex {
+  max-width: 960px;
+  padding: 0 25px;
+  margin: auto;
+  height: 100%;
+  position: relative;
+  z-index: 2;
+  text-align: center; }
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%; }
+
+.center {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.bold {
+  font-weight: 700;
+  color: white;
+  margin: 0; }
+
+.smallbig {
+  font-size: 24px;
+  color: white;
+  font-style: italic;
+  letter-spacing: 1px; }
+
+.left--overlay {
+  background-color: #28223B;
+  height: 450px;
+  width: 50%;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  opacity: 0.7; }
+
+.split {
+  height: 450px;
+  background: white; }
+  .split .right {
+    position: absolute;
+    float: right;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    background: white; }
+  .split .left {
+    position: relative;
+    float: left;
+    left: 0;
+    top: 0;
+    width: 50%;
+    height: 100%;
+    background: url("/assets/img/city.jpg") no-repeat center center;
+    background-size: cover;
+    outline: 20px solid RGBA(40, 40, 48, 0.5);
+    outline-offset: -20px; }
+    .split .left .flex {
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      .split .left .flex img {
+        position: relative;
+        z-index: 2; }
