--- a/assets/css/1-base/_sitewide.sass
+++ b/assets/css/1-base/_sitewide.sass
@@ -35,6 +35,29 @@
   z-index: 2
   text-align: center
 
+.container
+  padding: 0 25px
+
+  h1
+    margin: 0
+    padding-top: 30px
+    font-size: 40px
+    font-weight: 700
+    padding-bottom: 10px
+
+  p
+    margin: 0
+    font-size: 32px
+    font-weight: 500
+    padding-bottom: 30px
+
+  .line
+    height: 5px
+    width: 140px
+    display: block
+    background: RGBA(255, 76, 46, 1.00)
+    margin-bottom: 40px
+
 .flex
   display: flex
   height: 100%
@@ -88,6 +111,11 @@
     outline: 20px solid RGBA(40, 40, 48, 0.50)
     outline-offset: -20px
 
+    .blog
+      background: white
+      height: 100%
+      border-right: 20px solid RGBA(255, 76, 46, 1.00)
+
 
     .flex
       justify-content: center
@@ -95,3 +123,66 @@
       img
         position: relative
         z-index: 2
+
+.more
+  background-color: RGBA(255, 76, 46, 1.00)
+  color: white
+  font-weight: 600
+  font-style: italic
+  padding: 15px 25px
+  font-size: 20px
+  position: absolute
+  right: 0
+  bottom: 0
+  transition: all 0.1s ease-out
+
+  &:hover
+    color: white
+    background-color: RGBA(236, 74, 46, 1.00)
+
+.blog
+  width: 50%
+  float: left
+  top: 0
+  left: 0
+  background-color: white
+  outline: 10px solid RGBA(40, 44, 52, 0.10)
+  outline-offset: -10px
+  height: 100%
+  position: relative
+
+.post
+  margin-bottom: 20px
+  border: 5px solid RGBA(40, 44, 52, 0.10)
+  background: #eee
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+  h3
+    font-size: 28px
+    padding-bottom: 10px
+    margin-left: 20px
+    border-bottom: 3px solid RGBA(255, 76, 46, 1.00)
+
+.meta
+  display: flex
+  justify-content: center
+
+  .date, .cat
+    color: white
+    text-align: center
+    font-weight: 700
+    font-size: 22px
+    display: flex
+    justify-content: center
+    align-items: center
+
+  .date
+    background: RGBA(255, 76, 46, 1.00)
+    height: 120px
+    width: 60px
+  .cat
+    background: RGBA(236, 74, 46, 1.00)
+    height: 120px
+    width: 60px
