--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,13 @@
 <header class="bar">
-  <div class="logo"></div>
-  <nav></nav>
+  <div class="logo">
+    <img src="/assets/img/logo2.svg" alt="" width="200px">
+  </div>
+  <nav>
+    <ul>
+      <li>About</li>
+      <li>Work</li>
+      <li>Blog</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
 </header>
