End layout for the night

--- a/assets/css/1-base/_sitewide.sass
+++ b/assets/css/1-base/_sitewide.sass
@@ -29,7 +29,7 @@
   flex-wrap: wrap
   width: 100%
 
-.flex-child
+.flex-child-half
   width: 50%
   height: auto
 
@@ -58,6 +58,25 @@
   .text
     background: #fff
     height: 680px
+
+.flex-child-third
+  width: 33.33333333333%
+  height: auto
+
+  .featured-work
+    height: 240px
+    background: green
+    border-top: 10px solid #FF4C2E
+
+  #featured-work-1
+    background: url('/assets/img/bendesk2.png') no-repeat center center
+    background-size: cover
+
+  #featured-work-2
+    background: url('/assets/img/bendesk.png') no-repeat center center
+    background-size: cover
+
+
 
 
 
