--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="bar">
+<!-- <header class="bar">
   <div class="logo">
     <img src="/assets/img/logo2.svg" alt="" width="200px">
   </div>
@@ -10,4 +10,4 @@
       <li>Contact</li>
     </ul>
   </nav>
-</header>
+</header> -->
