--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/assets/css/main.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
     <!-- Fonts -->
     <script src="https://use.typekit.net/vky6cnw.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
