--- a/assets/css/1-base/_sitewide.sass
+++ b/assets/css/1-base/_sitewide.sass
@@ -13,13 +13,32 @@
 .section-text
   margin: 0
   padding: 7% 0
-  font-size: 24px
+  font-size: 27px
   font-weight: 500
 
 .text-container
   padding: 5%
   display: flex
   flex-direction: column
+
+.heading
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+  .more
+    font-size: 16px
+    font-weight: bold
+    text-transform: uppercase
+
+    a
+      transition: all 0.2s ease
+
+      &:hover
+        color: #FF4C2E
+
+      .fa-arrow-right
+        padding-left: 10px
 
 
 
@@ -71,6 +90,17 @@
       height: 680px
       background: white
 
+  .flex-col-12
+    width: 100%
+    order: 3
+    border-top: 10px solid #FF4C2E
+
+    .text-snippet
+      background: white
+      text-align: center
+      padding: 5% 0
+
+
 
 
 
@@ -95,7 +125,7 @@
     border-right: 10px solid #FF4C2E
 
   .section-text
-    font-size: 28px
+    font-size: 29px
 
 
 
@@ -313,21 +343,6 @@
         position: relative
         z-index: 2
 
-.more
-  background-color: RGBA(255, 76, 46, 1.00)
-  color: white
-  font-weight: 600
-  font-style: italic
-  padding: 15px 25px
-  font-size: 20px
-  position: absolute
-  right: 0
-  bottom: 0
-  transition: all 0.1s ease-out
-
-  &:hover
-    color: white
-    background-color: RGBA(236, 74, 46, 1.00)
 
 .blog
   width: 50%
